✨feat(all): 小程序请求的的格式化

--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -1,4 +1,4 @@
 <!--主页-->
 <view>
-    <image src="" class="top-theme"></image>
+    <image src="{{themeA.entrance_img}}" class="top-theme"></image>
 </view>
