--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -1,4 +1,15 @@
 <!--主页-->
 <view>
-    <image src="{{themeA.entrance_img}}" class="top-theme"></image>
+
+  <image src="{{themeA.entrance_img}}" class="top-theme"></image>
+
+  <swiper class="swiper" indicator-dots indicator-active-color="#157658" autoplay circular>
+    <block wx:for="{{bannerB.items}}" wx:key="index">
+      <swiper-item>
+        <image class="swiper" src="{{item.img}}"></image>
+      </swiper-item>
+    </block>
+  </swiper>
+
+  <Q-catergory-grid grid="{{grid}}"></Q-catergory-grid>
 </view>
