--- a/components/spu-scroll/index.wxml
+++ b/components/spu-scroll/index.wxml
@@ -1,4 +1,23 @@
+<wxs src="../../miniprogram_npm/lin-ui/filter/string.wxs" module="s"></wxs>
+
 <view class="container">
   <image class="title" src="{{theme.title_img}}"></image>
-  <scroll-view></scroll-view>
+  <scroll-view scroll-x class="scroll-view">
+    <view class="inner">
+      <block wx:for="{{spuList}}">
+        <view class="spu-container">
+          <image src="{{item.img}}" class="spu-img"></image>
+          <text class="spu-text">{{ item.title.length >= 8 ? s.substring(item.title, 0, 7) + '...' : item.title}}</text>
+          <l-price
+            l-unit-class="price-unit"
+            l-value-class="price-value"
+            value="{{item.price}}">
+
+          </l-price>
+        </view>
+      </block>
+    </view>
+  </scroll-view>
 </view>
+
+
